# peebot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
apps/event_processors/: apps.py
apps/telemetry_ingestion/: apps.py
apps/telemetry_storage/: apps.py
config/settings/: base.py  development.py  production.py
