[project]
name = "peebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.7",
    "django-celery-beat>=2.8.1",
    "django-environ>=0.12.0",
    "django-stubs>=5.2.7",
    "djangorestframework>=3.16.1",
    "model-bakery>=1.20.5",
    "mypy>=1.18.2",
    "psycopg[binary,pool]>=3.2.11",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-django>=4.11.1",
    "redis>=6.4.0",
    "ruff>=0.14.1",
]
